--- a/cygnus_site/templates/base.html
+++ b/cygnus_site/templates/base.html
@@ -15,6 +15,11 @@
     <link href="{{ STATIC_URL }}css/lib/bootstrap.min.css" rel="stylesheet">
     <!-- Angular-Strap CSS library -->
     <link rel="stylesheet" href="{{ STATIC_URL }}css/lib/angular-motion.min.css">
+    <!-- Angular-strap aside css -->
+    <link href="{{ STATIC_URL }}css/lib/bootstrap-additions.min.css" rel="stylesheet">
+
+    <!-- Cygnus custom styles -->
+    <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet">
 
     <!-- glyphicons - font awesome CDN -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -27,6 +32,19 @@
   </head>
 
   <body>
+
+    <!-- Django-Angular Script -->
+    <script type="text/javascript">
+    var NavbarCtrl = function ($scope) {
+      $scope.isActive = function(path) {
+        if ('{{ path }}' == path) {
+          return true;
+        } else {
+          return false;
+        }
+      };
+    };
+    </script>
     <!--
     <div id="indicator">
       <p class="visible-xs">DEBUG: xs - phones</p>
@@ -36,25 +54,23 @@
     </div>
 -->
       {% block content %}{% endblock content %}
-
       <!-- FOOTER -->
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-xs-6" id="footer-items">
+            <div class="col-xs-12 col-sm-7 col-md-6" id="footer-items">
               <ul class="list-inline text-center pull-left">
-                <li>&copy; 2014 Cygnus Management, LLC</li>
-                <li>Privacy</li>
-                <li>Terms</li>
+                <li><span>&copy; 2014 Cygnus Management, LLC</span></li>
+                <li><span>Privacy</span>&nbsp&nbsp&nbsp<span>Terms</span></li>
               </ul>
-            </div><!-- ./col-xs-6 -->
-            <div class="col-xs-6" id="footer-social">
-              <ul class="list-inline text-center pull-right">
+            </div><!-- ./col-xs-6 #footer-items -->
+            <div class="col-xs-12 col-sm-5 col-md-6" id="footer-social">
+              <ul class="list-inline text-center">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="mailto:cygnusmgmt2@gmail.com?subject=Questions/Comments"><i class="fa fa-envelope"></i></a></li>
               </ul>
-            </div><!-- ./col-xs-6 -->
+            </div><!-- ./col-xs-6 #footer-social -->
           </div><!-- ./row -->
         </div><!-- ./container -->
       </footer>
